メンバー一覧に名前とNGワードを表示するように変更